# evision

./: .formatter.exs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.v0.1.md  CHANGELOG.v0.2.md  CMakeLists.txt  Cheatsheet.cheatmd  Makefile  Makefile.win  README.md  do_release.sh  evision_precompiled.erl  mix.exs  rebar.config
.githooks/: pre-commit
.github/: FUNDING.yml  do-build-manylinux2014.sh  script-to-build-manylinux2014.sh
.github/scripts/: do-build.sh  script-to-build-freebsd.sh  script-to-build-gnu.sh
.github/workflows/: CI.yml  freebsd-precompile-x86_64.yml  linux-arm64.yml  linux-armv7.yml  linux-cuda-gnu.yml  linux-ppc64le.yml  linux-precompile-aarch64-cuda-gnu.yml  linux-precompile-cuda-gnu.yml  linux-precompile-gnu.yml  linux-precompile-manylinux2014-gnu.yml  linux-precompile-musl.yml  linux-precompile-x86_64-cuda-gnu.yml  linux-precompile-x86_64-manylinux2014-gnu.yml  linux-precompile.yml  linux-s390x.yml  linux-x86_64-subproject.yml  linux-x86_64.yml  macos-apple-device-precompile.yml  macos-precompile.yml  macos-x86_64.yml  nerves-build.yml  nerves-rpi4.yml  opencv-js-precompile.yml  test-python-compatibility.yml  windows-precompile-cuda.yml  windows-precompile.yml  windows-x86_64.yml  zz-selftest-upload.yml
c_src/: ArgInfo.hpp  erlcompat.hpp  evision.cpp  evision_consts.h  evision_custom_headers.h  evision_generated_enums.h  evision_generated_funcs.h  evision_generated_include.h  evision_generated_modules_content.h  evision_generated_types.h  nif_utils.hpp  opencv.cpp
c_src/evision_custom_headers/: evision_LSDDetector.hpp  evision_aruco.hpp  evision_barcode.hpp  evision_cchecker.hpp  evision_cuda.hpp  evision_dnn.hpp  evision_features2d.hpp  evision_flann.hpp  evision_geometry.hpp  evision_ml.hpp  evision_objdetect.hpp  evision_ppf_match_3d.hpp  evision_stereo.hpp  evision_text.hpp  evision_umat.hpp  evision_video.hpp  evision_videoio.hpp  evision_xfeatures2d.hpp
c_src/modules/: evision_cuda.cc  evision_cuda.h  evision_cuda_ipc.cc  evision_cuda_ipc.h  evision_gpumat.h  evision_highgui.h  evision_imdecode.h  evision_mat.h  evision_mat_api.h  evision_mat_utils.hpp  evision_video_api.h  evision_videocapture.h  opencv_highgui.h  opencv_imdecode.h  opencv_mat.h
c_src/windows_fix/: windows_fix.cpp
cc_toolchain/: aarch64-linux-gnu.cmake  aarch64-linux-musl.cmake  armv6-nerves-linux-gnueabihf.cmake  armv7l-linux-gnu.cmake  armv7l-linux-gnueabihf.cmake  armv7l-linux-musleabihf.cmake  linux-ppc64le.cmake  ppc64le-linux-musl.cmake  riscv64-linux-gnu.cmake  riscv64-linux-musl.cmake  s390x-linux-gnu.cmake  s390x-linux-musl.cmake  zig.toolchain.cmake
config/: config.exs
evision/: .gitignore
evision_beam/: .gitignore  CMakeLists.txt  Makefile  evision_precompiled.erl  rebar.config
evision_beam/c_src/: evision.cpp  evision_generated_enums.h  evision_generated_funcs.h  evision_generated_include.h  evision_generated_modules_content.h  evision_generated_types.h  headers-contrib.txt
evision_beam/cc_toolchain/: aarch64-linux-musl.cmake  aarch64-windows-msvc.cmake  i686-linux-gnu.cmake  ppc64le-linux-gnu.cmake  riscv64-linux-gnu.cmake  s390x-linux-gnu.cmake  x86_64-linux-musl.cmake  zig.toolchain.cmake
evision_beam/py_src/: arg_info.py  class_prop.py  erl_enum_expression_generator.py  fixes.py  gen2.py  helper.py  py2e.py
evision_beam/scripts/: download_opencv.ps1  download_opencv.sh  download_opencv_contrib.ps1
evision_beam/src/: evision.app.src  evision_highgui.erl  evision_mat.erl
examples/: README.md  cifar10.livemd  densenet121_benchmark.livemd  dnn-detection-model.livemd  dnn-googlenet.livemd  dnn-u2net_human_seg.livemd  dnn-u2net_portrait.livemd  evision_erlang_dnn_demo.erl  find_and_draw_contours.livemd  getting_started.livemd  imread.livemd  magic_image.livemd  ml-decision_tree_and_random_forest.livemd  ml-svm.livemd  ocl-default_opencl_device_info.livemd  pca.livemd  photo-hdr.livemd  qrcode.livemd  stitching.livemd  sudoku.livemd  warp_perspective.livemd  warp_polar.livemd
gleam_src/: evision_mat.erl
lib/: erl_cv_nif.ex  errorize.ex  evision_cuda_gpumat_handle.ex  evision_highgui.ex  evision_ipc_handle.ex  evision_mat.ex  evision_nx.ex  evision_structurise.ex  evision_win_fix.ex  evision_windows_fix.ex  evision_wx.ex  opencv_highgui.ex  opencv_mat.ex  opencv_nx.ex
nerves/: id_rsa  id_rsa.pub  toolchain.cmake
patches/: apply_patch.py
py_src/: arg_info.py  class_info.py  class_prop.py  cv_depths.py  doxygen_groups.py  elixir_module_generator.py  erl_enum_expression_generator.py  evision_extra_functions.py  evision_js_attr.py  evision_structures.py  evision_templates.py  find_python3_lib.py  fixes.py  format_strings.py  func_info.py  func_variant.py  gen2.py  hdr_parser.py  helper.py  module_generator.py  opencv_js_whitelist.py  pipeline.py  py2e.py
scripts/: build_opencv_js.sh  download_opencv.ps1  download_opencv.sh  download_opencv_contrib.ps1  download_opencv_contrib.sh  golden_diff.sh  inject_doc_groups.py  verify_opencv_js_csp.mjs
src/: evision.app.src  evision_highgui.erl  evision_internal_structurise.erl  evision_mat.erl  evision_windows_fix.erl
test/: README.md  dnn_detection_model.exs  dnn_detection_model_test.exs  dnn_detection_test.exs  dnn_test.exs  dnn_text_detection_model_db.exs  dnn_text_detection_model_db_test.exs  dnn_text_detection_model_east_test.exs  downloading_list.txt  evision_backend_test.exs  evision_camera.exs  evision_dnn_test.exs  evision_face_test.exs  evision_features2d_test.exs  evision_flann_test.exs  evision_gpumat_test.exs  evision_input_immutability_test.exs  evision_js_runtime_test.exs  evision_js_strip_test.exs  evision_js_tag_test.exs  evision_keypoint.exs  evision_keypoint_test.exs  evision_mat_test.exs  evision_new_types_test.exs  evision_nx_test.exs  evision_test.exs  evision_xfeatures2d_test.exs  ml_dtree_test.exs  ml_rtree_test.exs  ml_svm_test.exs  ocr_tesseract_test.exs  opencv_nx_test.exs  opencv_pca_test.exs  opencv_test.exs  orb_test.exs  pca_test.exs  photo_hdr_test.exs  qr_detector_test.exs  qr_encoder_test.exs  subproject.txt  (+3 more)
(+150 files in other folders)
